<resources>
    <string name="app_name">BodyPal</string>

    <!-- TITLES -->
    <string name="onboarding_title_1">Exercises</string>
    <string name="onboarding_title_2">Keep Eye On Health Tracking</string>
    <string name="onboarding_title_3">Check Your Progress</string>

    <!-- Descriptions -->
    <string name="onboarding_description_1">To Your Personalised Profile</string>
    <string name="onboarding_description_2">Log Your Activities</string>
    <string name="onboarding_description_3">A Tracking Calendar</string>

    <!-- Buttons -->
    <string name="onboarding_button_1">Next</string>
    <string name="onboarding_button_2">Lets Begin</string>
    <string name="onboarding_button_3">Skip</string>
    <string name="my_fitness">My Fitness</string>
    <string name="tracker">Tracker</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_to">New To BodyPal?</string>
    <string name="your_weight">Your Weight</string>
    <string name="weight">80KG</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="results">Results</string>
    <string name="devices">Devices</string>
    <string name="flame">Flame</string>
    <string name="man">Man</string>
    <string name="image">image</string>
    <string name="log_out">Log Out</string>
    <string name="emailVerification">Click the link in your email to confirm your account.</string>
    <string name="emailVerification2">If you can not find the email click link below to</string>
    <string name="emailVerification3">re-send email.</string>
    <string name="continue_string">Continue</string>
    <string name="emailHeading">Time to Check You Email</string>
    <string name="emailResend">Resend Confirmation Email</string>
</resources>
